[package]
name = "bevy_actify"
version = "0.2.0"
edition = "2024"
authors = ["iizudev <izudev@yandex.ru>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bevious/bevy_actify"
categories = ["game-development"]
keywords = ["gamedev", "bevy-plugin", "input"]

[features]
default = ["derive"]
derive = ["dep:bevy_actify_derive"]

[dependencies]
bevy = { version = "0.15", default-features = false }
bevy_actify_derive = { version = "0.3.0", optional = true }
