[package]
name = "bevy_actify"
version = "0.4.1"
edition = "2024"
authors = ["iizudev <izudev@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "An input action plugin for Bevy"
repository = "https://github.com/bevious/bevy_actify"
categories = ["game-development"]
keywords = ["gamedev", "bevy-plugin", "input"]

[features]
default = ["derive", "conditions"]
derive = ["dep:bevy_actify_derive"]
conditions = []

[dependencies]
bevy = { version = "0.16", default-features = false }
bevy_actify_derive = { version = "0.3.0", optional = true }
