[package]
name = "bevy_actify"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Input action plugin for Bevy"

[features]
default = ["derive"]
derive = []

[dependencies]
bevy = { version = "0.15", default-features = false }
bevy_actify_derive = { version = "0.1.0" }
